Changed many many things

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       name="description"
       content="Welcome to my website. My name is Favour Eliab IRANKOMEJE, a Rwanda-based web developer and web designer. Join me to bringing ideas into life"
     />
-    <title>Favor &#183; Portfolio</title>
+    <title>Favor &#183; a Rwanda-based web developer & UI/UX designer</title>
   </head>
   <body>
     <div id="root"></div>
